# napari-harpy

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  agents.md  create_env.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: release.yaml
Roadmap/: dask_backed_tables.md  feature_extraction.md  issue_cache_adata.md  issue_napari_spatialdata.md  issue_points_rendering.md  roadmap.md  spec_phase_6.md  tickets_phase_6.md
Roadmap/annotate_holes/: annotation_widget_holes.md  create_holes.md  edit_anchors.md
Roadmap/annotation_fixes/: annotation.md  color_edge.md  invalid_triangulation.md  issue_pandas_na.md  listen_to_active_layer_change.md  magic_wand.md  radius_based_move.md  recover_invalid.md  rendering_issue.md  slow_annotation.md
Roadmap/colormap/: colormap.md
Roadmap/create_table_feature_extraction/: create_table.md
Roadmap/feature_extraction_roadmap/: feature_extraction.md  feature_extraction_channel_selection.md  napari_spatialdata_independance.md
Roadmap/harpy_stale_zarr/: cleanup.md
Roadmap/headless/: headless_roadmap.md
Roadmap/histogram_widget/: histogram_widget.md  implementation_plan.md
Roadmap/multiple_coordinate_systems/: cross_sample_tables.md  multiple_coordinate_systems.md  multiple_samples_feature_extraction_widget.md  object_classifier.md
Roadmap/multiplex_viewing_optimization/: optimize_multiplex.md
Roadmap/object_classification_custom/: custom_obsm.md  fast_categorical_coloring.md  hide_write_table.md  highlight_upon_click.md
Roadmap/pixel_classification/: comments.md  pixel_classification.md  pixel_classification_17_7_26.md  pixel_classification_phase_1.md
Roadmap/shapes_elements/: add_new_shapes.md  add_shapes_elements_to_viewer.md  annotation_shapes.md  color_by_obs_and_var.md  edit_existing_annotation.md  pan_zoom.md  pan_zoom_version_2.md  render_pointshapes_as_napari_point.md  rendering_benchmark.md  tooltip.md
Roadmap/spatial_query/: create_holes.md  spatial_query.md  spatial_query_centroid.md
Roadmap/transcripts_visualization/: Transcripts_Tile_cache.md  comments.md  neurglancer_gene_index_cache.md  neuroglancer_napari_points_cache_recommendations.md  phase_1_spatial_first_cache.md  ticket_napari_harpy.md  transcripts_gene_index_napari.md  visualizing_transcripts.md  visualizing_transcripts_tiled_multiscale.md
Roadmap/viewer/: combobox.md
Roadmap/viewer_widget/: status_card.md  tickets.md  viewer_widget.md  vw_02.md  vw_03.md  vw_04.md  vw_05.md  vw_07.md
scripts/: debug_view_widget.py  debug_widget.py  release_tag.sh  xenium_point_radius_shapes_viewer.py
src/napari_harpy/: __init__.py  _annotation.py  _app_state.py  _class_palette.py  _classifier.py  _classifier_core.py  _classifier_export.py  _classifier_viewer_styling.py  _feature_extraction.py  _feature_extraction_core.py  _interactive.py  _persistence.py  _persistence_core.py  _points_value_index.py  _reader.py  _resources.py  _shapes_triangulation.py  _spatialdata.py  _table_color_source.py  _transcript_tiles.py  _transcript_value_index.py  _viewer_adapter.py  _viewer_overlay_styling.py  _viewer_styling.py  _widget.py  datasets.py  headless.py  napari.yaml
src/napari_harpy/core/: _color_source.py  annotation.py  class_palette.py  classifier.py  classifier_export.py  feature_extraction.py  feature_matrix_metadata.py  histogram.py  persistence.py  shapes_annotation.py  shapes_geometry.py  spatialdata.py  table_color_source.py  validation.py
src/napari_harpy/viewer/: _styling.py  adapter.py  image_styling.py  labels_async.py  labels_colormap.py  labels_styling.py  overlay_styling.py  points_styling.py  shapes_styling.py
src/napari_harpy/widgets/: __init__.py  _feature_extraction_status_card.py  _feature_extraction_widget.py  _object_classification_status_card.py  _object_classification_widget.py  _shared_styles.py  (+3 more)
tests/: _shapes_regression_fixtures.py  conftest.py  test_annotation.py  test_annotation_widget.py  test_app_state.py  test_class_palette.py  test_classifier.py  test_classifier_export.py  test_color_source.py  test_feature_extraction.py  test_feature_extraction_widget.py  test_feature_matrix_metadata.py  test_headless.py  test_histogram.py  test_histogram_controller.py  test_histogram_plot_widget.py  test_histogram_status_card.py  test_histogram_widget.py  test_labels_async.py  test_labels_colormap.py  test_package.py  test_persistence.py  test_points_controller.py  test_points_value_index.py  test_points_widget.py  test_reader.py  test_shapes_annotation.py  test_shapes_annotation_create_holes.py  test_shapes_annotation_layer_state.py  test_shapes_annotation_snapshot.py  test_shapes_annotation_widget.py  test_shapes_geometry.py  test_shapes_native_polygon_mutations.py  test_shapes_styling.py  test_shapes_triangulation_backend.py  test_shared_styles.py  test_spatial_query_annotation.py  test_spatial_query_canonical.py  test_spatial_query_centroids.py  test_spatial_query_controller.py  (+15 more)
tests/fixtures/: create_holes_triangulation_failure.txt
(+59 files in other folders)
